# FoundationTools

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
doc/: Doxyfile
doc/html/: annotated.html  classAVP.html  classAvpDictionaryEntry-members.html  classBuffer-members.html  classDNS_1_1Cache-members.html  classDNS_1_1Cache.html  classDNS_1_1CacheMap.html  classDNS_1_1CacheRefresher.html  classDNS_1_1Query-members.html  classDNS_1_1Query.html  classDNS_1_1QueryProcessor.html  classDNS_1_1QueryProcessorThread-members.html  classDNS_1_1QueryProcessorThread.html  classDNS_1_1Question-members.html  classDNS_1_1Question.html  classDNS_1_1RRecordA-members.html  classDNS_1_1RRecordA.html  classDNS_1_1RRecordAAAA-members.html  classDNS_1_1RRecordAAAA.html  classDNS_1_1RRecordCNAME-members.html  classDNS_1_1RRecordCNAME.html  classDNS_1_1RRecordNAPTR-members.html  classDNS_1_1RRecordNAPTR.html  classDNS_1_1RRecordNS-members.html  classDNS_1_1RRecordNS.html  classDNS_1_1RRecordSRV-members.html  classDNS_1_1RRecordSRV.html  classDNS_1_1ResourceRecord-members.html  classDNS_1_1ResourceRecord.html  classEBzip2.html  classECircularBuffer-members.html  classECircularBuffer.html  classECliEndpoint-members.html  classECliEndpoint.html  classECliHandler-members.html  classECliHandler.html  classECliUserNameHeader-members.html  classEDirectory-members.html  classEDirectory.html  classEError-members.html  (+416 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  (+90 more)
docs/: Doxyfile
docs/html/: README_8md.html  annotated.html  classAVP-members.html  classAvpDictionaryEntry.html  classBuffer.html  classDNS_1_1Cache-members.html  classDNS_1_1Cache.html  classDNS_1_1CacheMap-members.html  classDNS_1_1CacheMap.html  classDNS_1_1Query-members.html  classDNS_1_1Query.html  classDNS_1_1Question-members.html  classDNS_1_1Question.html  classDNS_1_1RRecordA-members.html  classDNS_1_1RRecordA.html  classDNS_1_1RRecordAAAA-members.html  classDNS_1_1RRecordAAAA.html  classDNS_1_1RRecordCNAME-members.html  classDNS_1_1RRecordCNAME.html  classDNS_1_1RRecordNAPTR-members.html  classDNS_1_1RRecordNAPTR.html  classDNS_1_1RRecordNS-members.html  classDNS_1_1RRecordNS.html  classDNS_1_1RRecordSRV-members.html  classDNS_1_1RRecordSRV.html  classDNS_1_1ResourceRecord-members.html  classDNS_1_1ResourceRecord.html  classEBzip2-members.html  classEBzip2.html  classECircularBuffer.html  classECliEndpoint.html  classECliHandler.html  classECliUserNameHeader.html  classEDirectory.html  classEError.html  classEEvent-members.html  classEEvent.html  classEGetOpt-members.html  classEGetOpt.html  classEHash.html  (+331 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_4.js  classes_5.js  classes_f.js  defines_2.js  defines_4.js  enums_2.js  enums_3.js  enums_a.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_c.js  enumvalues_e.js  enumvalues_f.js  files_1.js  functions_0.js  (+27 more)
exampleProgram/: Makefile.am  Makefile.in  build  epctest.json  test.cpp
ft/: Makefile.am  Makefile.in  ftbase.cpp  ftbzip2.cpp  ftcbuf.cpp  ftdir.cpp  fterror.cpp  ftgetopt.cpp  fthash.cpp  ftlogger.cpp  ftmessage.cpp  ftpath.cpp  ftqbase.cpp  ftqpriv.cpp  ftqpub.cpp  ftshmem.cpp  ftsocket.cpp  ftstatic.cpp  ftstring.cpp  ftsynch.cpp  fttbase.cpp  ftthread.cpp  fttime.cpp  fttimer.cpp  fttq.cpp  ftutility.cpp
include/: Makefile.am  Makefile.in
include/epc/: dnscache.h  dnsparser.h  dnsquery.h  dnsrecord.h  eatomic.h  ebase.h  ebzip2.h  ecbuf.h  ecli.h  edir.h  eerror.h  efd.h  efdjson.h  egetopt.h  ehash.h  einternal.h  elogger.h  emsg.h  epath.h  epc.h  epcdns.h  epctools.h  eqbase.h  eqpriv.h  eqpub.h  eshmem.h  esocket.h  estatic.h  estats.h  estring.h  esynch.h  esynch2.h  esyslog.h  etbase.h  etevent.h  ethread.h  etime.h  etimer.h  etimerpool.h  etq.h  (+2 more)
include/ft/: ft.h  ftalloc.h  ftatomic.h  ftautohandle.h  ftbase.h  ftbzip2.h  ftcbuf.h  ftdir.h  fterror.h  ftgetopt.h  fthash.h  ftinternal.h  ftlogger.h  ftmessage.h  ftpath.h  ftqbase.h  ftqpriv.h  ftqpub.h  ftshmem.h  ftsocket.h  ftstatic.h  ftstring.h  ftsynch.h  ftsynch2.h  ftsyslog.h  fttbase.h  ftthread.h  fttime.h  fttimer.h  fttq.h  fttypes.h  ftutility.h
src/: Makefile.am  Makefile.in  dnscache.cpp  dnsparser.cpp  ebase.cpp  ebzip2.cpp  ecbuf.cpp  ecli.cpp  edir.cpp  eerror.cpp  efd.cpp  efdjson.cpp  egetopt.cpp  ehash.cpp  elogger.cpp  emsg.cpp  epath.cpp  epcdns.cpp  eqbase.cpp  eqpriv.cpp  eqpub.cpp  eshmem.cpp  esocket.cpp  estatic.cpp  estats.cpp  estring.cpp  esynch.cpp  etbase.cpp  ethread.cpp  etime.cpp  etimer.cpp  etimerpool.cpp  etq.cpp  eutil.cpp
