############################################################################
# Copyright (c) 2009-2019 Brian Waters
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
############################################################################

# These files will end up in the install include directory
# For example, /usr/include
nobase_include_HEADERS = ft/ft.h ft/ftalloc.h ft/ftatomic.h ft/ftautohandle.h ft/ftbase.h ft/ftbzip2.h ft/ftcbuf.h ft/ftdir.h ft/fterror.h ft/ftgetopt.h ft/fthash.h ft/ftinternal.h ft/ftlogger.h ft/ftmessage.h ft/ftpath.h ft/ftqbase.h ft/ftqpriv.h ft/ftqpub.h ft/ftshmem.h ft/ftsocket.h ft/ftstatic.h ft/ftstring.h ft/ftsynch.h ft/ftsynch2.h ft/ftsyslog.h ft/fttbase.h ft/ftthread.h ft/fttime.h ft/fttimer.h ft/fttq.h ft/fttypes.h ft/ftutility.h
